creacion de buscador

--- a/catalogo.html
+++ b/catalogo.html
@@ -17,10 +17,10 @@
         <link href="css/styles.css" rel="stylesheet" />
     
     <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!--<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 
   <!-- Custom styles for this template -->
-  <link href="css/shop-homepage.css" rel="stylesheet">
+  <!--<link href="css/shop-homepage.css" rel="stylesheet">-->
     
     </head>
     <body id="page-top">
@@ -57,9 +57,13 @@
     <div class="row">
 
    </div>
--->
 
-<div>      
+
+<div>    
+  
+  <div class="col-12 mt-2">
+    <input type="text" id="myInput" onkeyup="filtrarCatalogo()" placeholder="Buscar en el catalogo" title="Ingresa un texto">
+</div>
 
 </div>
 
@@ -70,7 +74,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\bocaditos1.PNG" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Frutas de mazapan</a>
+                  <a class="bocado" href="#">Frutas de mazapan</a>
                 </h4>
                 <h5>$15 c/100</h5>
                 <p class="card-text">Frutas hechas de mazapan en forma de frutas</p>
@@ -84,7 +88,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\bocaditos2.PNG" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Macarons</a>
+                  <a class="bocado" href="#">Macarons</a>
                 </h4>
                 <h5>$18 c/100</h5>
                 <p class="card-text">Alfajores de pan con crema pastelera de diferentes colores</p>
@@ -98,7 +102,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\bocaditos3.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Mini Brownies</a>
+                  <a class="bocado" href="#">Mini Brownies</a>
                 </h4>
                 <h5>$5</h5>
                 <p class="card-text">Pequenos brownies decorados con tus dulces favoritos!</p>
@@ -112,7 +116,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\bocaditos4.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Brigadeiros</a>
+                  <a class="bocado" href="#">Brigadeiros</a>
                 </h4>
                 <h5>$5</h5>
                 <p class="card-text">Bolas de chocolate cubiertas de birutitas de chocolate</p>
@@ -126,7 +130,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\bocaditos5.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Delicias de novia</a>
+                  <a class="bocado" href="#">Delicias de novia</a>
                 </h4>
                 <h5>$5</h5>
                 <p class="card-text">Bocasditos de sal con nueces banadas de chocolate blanco</p>
@@ -140,7 +144,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\bocaditos6.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Mini empanadas rellenas</a>
+                  <a class="bocado" href="#">Mini empanadas rellenas</a>
                 </h4>
                 <h5>$5</h5>
                 <p class="card-text">Empanadas rellenas de pollo, carne o jamon y queso</p>
@@ -154,7 +158,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cakepops1.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Lazos</a>
+                  <a class="bocado" href="#">Lazos</a>
                 </h4>
                 <h5>$1.50</h5>
                 <p class="card-text">Cakepops de vainilla o chocolate cubiertos de chocolate blanco</p>
@@ -168,7 +172,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cakepops2.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Rosas</a>
+                  <a class="bocado" href="#">Rosas</a>
                 </h4>
                  <h5>$1.50</h5>
                 <p class="card-text">Cakepops de vainilla o chocolate cubiertos de chocolate blanco</p>
@@ -182,7 +186,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cakepops3.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Flores</a>
+                  <a class="bocado" href="#">Flores</a>
                 </h4>
                 <h5>$1.50</h5>
                 <p class="card-text">Cakepops de vainilla o chocolate cubiertos de chocolate blanco</p>
@@ -196,7 +200,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cakepops4.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">San Valentin</a>
+                  <a class="bocado" href="#">San Valentin</a>
                 </h4>
                 <h5>$1.50</h5>
                 <p class="card-text">Cakepops de vainilla o chocolate cubiertos de chocolate blanco</p>
@@ -210,7 +214,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cakepops5.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Navidad</a>
+                  <a class="bocado" href="#">Navidad</a>
                 </h4>
                  <h5>$1.50</h5>
                 <p class="card-text">Cakepops de vainilla o chocolate cubiertos de chocolate blanco</p>
@@ -224,7 +228,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cakepops6.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Bautizos</a>
+                  <a class="bocado" href="#">Bautizos</a>
                 </h4>
                 <h5>$1.50</h5>
                 <p class="card-text">Cakepops de vainilla o chocolate cubiertos de chocolate blanco</p>
@@ -238,7 +242,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cupcakes1.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Cupcakes chocolate</a>
+                  <a class="bocado" href="#">Cupcakes chocolate</a>
                 </h4>
                  <h5>$1.50 c/u</h5>
                 <p class="card-text">Cupcakes de chocolate o vainilla rellenos de manjar con cubierta de crema y decoradas con grajeas de colorest</p>
@@ -253,7 +257,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cupcakes2.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Cupcakes make-up</a>
+                  <a class="bocado" href="#">Cupcakes make-up</a>
                 </h4>
                  <h5>$2.75 c/u</h5>
                 <p class="card-text">Cupcakes de chocolate o vainilla rellenos de manjar con cubierta de crema y decoradas con formas hechas de fondant en alto relieve</p>
@@ -268,7 +272,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cupcakes3.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Cupcakes minions</a>
+                  <a class="bocado" href="#">Cupcakes minions</a>
                 </h4>
                  <h5>$2.50 c/u</h5>
                 <p class="card-text">Cupcakes de chocolate o vainilla rellenos de manjar con cubierta de crema y decoradas con formas hechas de fondant</p>
@@ -282,7 +286,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cupcakes4.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Cupcakes golf</a>
+                  <a class="bocado" href="#">Cupcakes golf</a>
                 </h4>
                  <h5>$2.50 c/u</h5>
                 <p class="card-text">Cupcakes de chocolate o vainilla rellenos de manjar con cubierta de crema y decoradas con formas hechas de fondant</p>
@@ -297,7 +301,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cupcakes5.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Cupcakes lol</a>
+                  <a class="bocado" href="#">Cupcakes lol</a>
                 </h4>
                  <h5>$1.75 c/u</h5>
                 <p class="card-text">Cupcakes de chocolate o vainilla rellenos de manjar con cubierta de crema y decoradas con cartulinas de tus personajes favoritos!</p>
@@ -312,7 +316,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\cupcakes6.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Cupcakesabejitas</a>
+                  <a class="bocado" href="#">Cupcakesabejitas</a>
                 </h4>
                 <h5>$2 c/u</h5>
                 <p class="card-text">Cupcakes de chocolate o vainilla rellenos de manjar con cubierta de crema y decoradas con una abejita de fondant!</p>
@@ -329,7 +333,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\tortas1.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Torta de sirena</a>
+                  <a class="bocado" href="#">Torta de sirena</a>
                 </h4>
                 <h5>$35</h5>
                 <p class="card-text">Cake de vainilla decorada con tematica de sirena </p>
@@ -344,7 +348,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\tortas2.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Torta de toy Story</a>
+                  <a class="bocado" href="#">Torta de toy Story</a>
                 </h4>
                 <h5>$40</h5>
                 <p class="card-text">Torta de chocolate decorada al estilo del favoritos de los pequenos. TOY STORY!</p>
@@ -357,7 +361,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\tortas3.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Torta para bautizos</a>
+                  <a class="bocado" href="#">Torta para bautizos</a>
                 </h4>
                 <h5>$40</h5>
                 <p class="card-text">Decorada para cualquier bautizo, de ninos o ninas</p>
@@ -370,7 +374,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\tortas4.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Torta de Game of Thrones</a>
+                  <a class="bocado" href="#">Torta de Game of Thrones</a>
                 </h4>
                 <h5>$50</h5>
                 <p class="card-text">Para verdaderos fans!</p>
@@ -383,7 +387,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\tortas5.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Torta de circo</a>
+                  <a class="bocado" href="#">Torta de circo</a>
                 </h4>
                 <h5>$25</h5>
                 <p class="card-text">Para los fans de la verdadera diversion! Cake decorado con tematica de circo!</p>
@@ -399,7 +403,7 @@
               <a href="#"><img class="card-img-top" src="imgcat\tortas8.PNG" alt="" ></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Torta de hamburguesa</a>
+                  <a class="bocado" href="#">Torta de hamburguesa</a>
                 </h4>
                 <h5>$55</h5>
                 <p class="card-text">Para los amantes de la comida rapida,torta en forma de hamburguesa!</p>
@@ -450,5 +454,6 @@
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="recetas.js"></script>
     </body>
 </html>
