Navegacion guiada y seccion nuestro equipo

--- a/contacto.html
+++ b/contacto.html
@@ -53,13 +53,39 @@
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
-                                <input class="form-control" id="email" type="email" placeholder="Email *" required="required" data-validation-required-message="Porfavor ingrese su email." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group mb-md-0">
                                 <input class="form-control" id="phone" type="tel" placeholder="Teléfono *" required="required" data-validation-required-message="Porfavor ingrese su número de teléfono." />
                                 <p class="help-block text-danger"></p>
                             </div>
+                            <div class="form-group">
+                                <input class="form-control" id="fecnac" type="date" required="required" data-validation-required-message="Porfavor ingrese su fecha de nacimiento." />
+                                <p class="help-block text-danger"></p>    
+                            </div>
+
+                            <div class="form-group">
+                                <select class = "form-control" name="ciudades" id="ciudades">
+                                    <option value="Seleccione su ciudad">Santa Lucia</option>
+                                     <option value="santalucia">Santa Lucia</option>
+                                    <option value="elempalme">El Empalme</option>
+                                    <option value="pedrocarbo">Pedro Carbo</option>
+                                    <option value="guayaquil">Guayaquil</option>
+                                    <option value="nobol">Nobol</option>
+                                    <option value="milagro">Milagro</option>
+                                    <option value="naranjito">Naranjito</option>
+                                    <option value="colimes">Colimes</option>
+                                    <option value="nobol">Nobol</option>
+                                    <option value="isidroayora">Isidro Ayora</option>
+                                    <option value="balzar">Balzar</option>
+                                    <option value="duran">Duran</option>
+                                </select>
+                                <p class="help-block text-danger"></p>
+
+                            </div>
+
+                            <div class="form-group mb-md-0">
+                                <input class="form-control" id="email" type="email" placeholder="Email *" required="required" data-validation-required-message="Porfavor ingrese su email." />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            
                         </div>
                         <div class="col-md-6">
                             <div class="form-group form-group-textarea mb-md-0">
