--- a/paper-dashboard-master/examples/user.html
+++ b/paper-dashboard-master/examples/user.html
@@ -95,12 +95,12 @@ Coded by www.creative-tim.com
               <p>Typography</p>
             </a>
           </li-->
-          <li class="active-pro">
+          <!--li class="active-pro">
             <a href="./upgrade.html">
               <i class="nc-icon nc-spaceship"></i>
               <p>Upgrade to PRO</p>
             </a>
-          </li>
+          </li-->
         </ul>
       </div>
     </div>
