--- a/catalogo.html
+++ b/catalogo.html
@@ -72,23 +72,18 @@
   
   <div class="text-center">
   <h2 class="formatot">CATÁLOGO</h2>
-  <h3 class="subt">En esta sección encontrarás un catálogo de nuestros productos</h3>
+  <h3 class="subt">En esta sección encontrarás un catálogo de nuestros deliciosos productos</h3>
 </div>
 
 
 
 
   <div class="col-12 mt-2">
-    <input type="text" id="myInput" onkeyup="filtrarCatalogo()" placeholder="Buscar en el catalogo" title="Ingresa un texto">
+    <input type="text" id="myInput" onkeyup="filtrarCatalogo()" placeholder="Buscar en el catálogo" title="Ingresa un texto">
 </div>
 
 </div>
 
-
-<!--div id="contenidoc">
-
-
-</div-->
 
 
 <div id="row">
@@ -98,7 +93,7 @@
 </div>
 
 
-<!--comentario
+
         <div class="row">
 
           <div class="col-lg-2 col-md-6 mb-4" >
