--- a/catalogo.html
+++ b/catalogo.html
@@ -76,7 +76,7 @@
 </div>
 
 <div class="lanimacion">
-  <p>Productos</p>
+  <p>Productos: </p>
   <ul>
     <li>Bocaditos</li>
     <li>Cakepops</li>
