--- a/quienessomos.html
+++ b/quienessomos.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+        <!--<script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>-->
 
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -114,7 +114,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/Teams/luisA.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/Teams/luisA.jpeg" alt="" />
                             <h4>Luis Anchundia</h4>
                             <p class="text-muted">Programador</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
@@ -124,7 +124,7 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/Teams/odalysG.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/Teams/odalysG.jpeg" alt="" />
                             <h4>Odalys Guzman</h4>
                             <p class="text-muted">Programador</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
@@ -144,12 +144,17 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/Teams/miguelR.jpeg" alt="" />
                             <h4>Miguel Rivadeneira</h4>
                             <p class="text-muted">Programador </p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+
+                            <a href="https://www.facebook.com/Susbocaditos" target="_BLANK" class="btn btn-dark btn-social mx-2m"></a>
+                        	<a href="https://www.instagram.com/bgbocaditos/?hl=es-la" target="_BLANK" class="btn btn-dark btn-social mx-2"></a>
+                        	<a href="#" target="_BLANK" class="btn btn-dark btn-social mx-2"></a>
+
+                            <!--<a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>-->
                         </div>
                     </div>
                 </div>
