--- a/principal.html
+++ b/principal.html
@@ -114,7 +114,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Tenemos todo lo que necesitas!</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Fusionamos arte con reposteria.Trabajamos con amor y lo mejor de todo es que es trabajo artesanal. En BGBocaditos contamos con pasteles y bocaditos para cada ocasion espacial. Cada cake es unico y esta preparado con ingredientes frescos y de alta calidad.</p>
+                        <p class="text-white mt-0">Fusionamos arte con reposteria.Trabajamos con amor y lo mejor de todo es que es trabajo artesanal. En BGBocaditos contamos con pasteles y bocaditos para cada ocasion espacial. Cada cake es unico y esta preparado con ingredientes frescos y de alta calidad.</p>
                     </div>
                 </div>
             </div>
@@ -125,7 +125,8 @@
       			<div class="intro">
         			<img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.png" alt="">
         			<div class="intro-text left-0 text-center bg-faded p-5 rounded">
-          				<p class="mb-3">I genuinely enjoy the process of making colourful, delicious food. But I do allow myself an occasional piece of chocolate - today I had a pastry. If I fancy something, I'll have it.
+          				<p class="mb-3">
+                            Realmente disfruto el proceso de hacer comida colorida y deliciosa. Pero me permito un trozo de chocolate ocasional, hoy comí un pastel. Si me apetece algo, lo tengo.
           				</p>
           				<h2 class="section-heading mb-4">
            				<span class="section-heading-lower">Victoria Pendleton</span>
