--- a/catalogo.html
+++ b/catalogo.html
@@ -29,17 +29,17 @@
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="principal.html"><img src="assets/img/navbar-logo.png" alt="" /></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
+                    Menú
                     <i class="fas fa-bars ml-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="principal.html">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="catalogo.html">Catalogo</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="catalogo.html">Catálogo</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="recetas.html">Recetas</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="tutoriales.html">Tutoriales</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="quienessomos.html">Quienes Somos</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contacto.html">Contactanos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="quienessomos.html">Quiénes Somos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contacto.html">Contáctanos</a></li>
                     </ul>
                 </div>
             </div>
