--- a/tutoriales.html
+++ b/tutoriales.html
@@ -27,11 +27,11 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="principal.html">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="catalogo.html">Catalogo</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="catalogo.html">Catálogo</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="recetas.html">Recetas</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="tutoriales.html">Tutoriales</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="quienessomos.html">Quienes Somos</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contacto.html">Contactanos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="quienessomos.html">Quiénes Somos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contacto.html">Contáctanos</a></li>
                     </ul>
                 </div>
             </div>
