--- a/contacto.html
+++ b/contacto.html
@@ -42,7 +42,7 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contactanos</h2>
+                    <h2 class="section-heading text-uppercase">Contáctanos</h2>
                     <h3 class="section-subheading text-muted-1">Para alguna cotización o pedido ¡No dudes en escribirnos!</h3>
                 </div>
                 <form id="contactForm" name="sentMessage" novalidate="novalidate">
@@ -63,7 +63,7 @@
 
                             <div class="form-group">
                                 <select class = "form-control" name="ciudades" id="ciudades">
-                                    <option value="Seleccione su ciudad">Santa Lucia</option>
+                                    <option value="seleccionesuciudad">Seleccione su ciudad</option>
                                      <option value="santalucia">Santa Lucia</option>
                                     <option value="elempalme">El Empalme</option>
                                     <option value="pedrocarbo">Pedro Carbo</option>
