--- a/Admin/paginas/dashboard.html
+++ b/Admin/paginas/dashboard.html
@@ -157,7 +157,7 @@ Coded by www.creative-tim.com
                 <div class="row">
                   <div class="col-5 col-md-4">
                     <div class="icon-big text-center icon-warning">
-                      <i class="nc-icon nc-favourite-28 text-primary"></i>
+                      <img src="../../assets/img/fb.jpeg" alt="">
                     </div>
                   </div>
                   <div class="col-7 col-md-8">
@@ -183,7 +183,7 @@ Coded by www.creative-tim.com
                 <div class="row">
                   <div class="col-5 col-md-4">
                     <div class="icon-big text-center icon-warning">
-                      <i class="nc-icon nc-favourite-28 text-primary"></i>
+                      <img src="../../assets/img/it.jpeg" alt="">
                     </div>
                   </div>
                   <div class="col-7 col-md-8">
