--- a/quienessomos.html
+++ b/quienessomos.html
@@ -30,11 +30,11 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="principal.html">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="catalogo.html">Catalogo</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="catalogo.html">Catálogo</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="recetas.html">Recetas</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="tutoriales.html">Tutoriales</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Quienes Somos</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contacto.html">Contactanos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Quiénes Somos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contacto.html">Contáctanos</a></li>
                     </ul>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading">Catálogo</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">¡Dale un vistazo al catalogo de lo que tenemos para ti!</p></div>
+                            <div class="timeline-body"><p class="text-muted">¡Dale un vistazo al catálogo de lo que tenemos para tí!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -87,7 +87,7 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading">Sección de contacto</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Podrás ponerte en contacto con nostros en cualquier red social disponible en la sección <i>CONTACTANOS</i> o por vía correo electrónico.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Podrás ponerte en contacto con nostros en cualquier red social disponible en la sección <i>CONTÁCTANOS</i> o por vía correo electrónico.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
