arreglo de error

--- a/tutoriales.html
+++ b/tutoriales.html
@@ -21,7 +21,7 @@
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="principal.html"><img src="assets/img/navbar-logo.png" alt="" /></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
+                    Menú
                     <i class="fas fa-bars ml-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -32,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="tutoriales.html">Tutoriales</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="quienessomos.html">Quiénes Somos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contacto.html">Contáctanos</a></li>
+                        
                     </ul>
                 </div>
             </div>
@@ -125,6 +126,13 @@
                 </div>
             </div>
         </footer>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Contact form JS-->
+        <script src="assets/mail/jqBootstrapValidation.js"></script>
+        <script src="assets/mail/contact_me.js"></script>
 
     <script src="recetas.js"></script>
 
